--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
         <version>3.0.0</version>
     </dependency>
 		<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>2.0.0.Final</version>
+</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
